# AI-Singularity

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  security.yml
docs/: FLOATING_ACCOUNT_CARD_SPEC.md  MODULARIZATION_AUDIT_2026-04-16.md  PLATFORM_SCOPE_DECISION.md  PLATFORM_SIDEBAR_IA.md  PLATFORM_STATUS_ACTION_REGRESSION.md  TOKEN_EXCHANGE_ARCHITECTURE.md  TRAY_MENU_IA.md  UPDATE_REMINDER_POLICY.md  WAKEUP_CLIENT_VERSION_MATRIX.md  frontend_design_guidelines.md
scripts/: build.mjs
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: 2  Cargo.toml  check_results.txt  error_log.txt  errors.json  errors.txt  errors_stage2.txt  errors_stage3.txt  output.txt  rust_error.txt  rust_utf8.txt  tauri.conf.json
src-tauri/backups/: backup-20260514-122818.json  backup-20260514-122844.json  backup-20260514-122931.json  backup-20260514-123915.json
src-tauri/capabilities/: default.json
src-tauri/src/: atomic_write.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  panic_hook.rs  store.rs  tray.rs
src-tauri/src/commands/: account_auto_switch.rs  account_group.rs  account_health.rs  account_refresh.rs  alert.rs  analytics.rs  announcement.rs  backup.rs  balance.rs  balance_tracker.rs  codex_quota.rs  device_fingerprint.rs  env.rs  extension_import.rs  floating_account_card.rs  gemini_instance.rs  ide_account.rs  ide_scanner.rs  injector.rs  keys.rs  logs.rs  mcp.rs  mod.rs  models.rs  notify.rs  oauth.rs  prompts.rs  provider.rs  provider_current.rs  proxy.rs  quota_alert.rs  sandbox.rs  security.rs  session.rs  skill.rs  speedtest.rs  stats.rs  stream_check.rs  token_calculator.rs  tools.rs  (+7 more)
src-tauri/src/db/: account_settings.rs  account_switch_history.rs  codex_quota_cache.rs  device_fingerprints.rs  ide_accounts.rs  migrations.rs  wakeup.rs
src-tauri/src/models/: engine.rs  ide_accounts.rs  providers.rs  user_tokens.rs
src-tauri/src/proxy/: converter.rs  mod.rs  router.rs  security.rs  server.rs
src-tauri/src/proxy/mappers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/proxy/server/: helpers.rs  orchestration.rs  preprocess.rs  request.rs  transport.rs
src-tauri/src/services/: account_auto_switch.rs  account_group_store.rs  account_health.rs  account_pool.rs  account_refresh_orchestrator.rs  account_switch_executor.rs  alert.rs  analytics.rs  announcement.rs  antigravity_ide.rs  backup.rs  balance.rs  balance_tracker.rs  codex_ide.rs  codex_instance_store.rs  codex_runtime.rs  codex_shared.rs  device_fingerprint.rs  env_checker.rs  event_bus.rs  extension_import.rs  floating_account_card_store.rs  gemini_ide.rs  gemini_instance_store.rs  health_check_daemon.rs  ide_injector.rs  ide_scanner.rs  local_ide_refresh.rs  logs.rs  mcp.rs  mod.rs  model_catalog.rs  model_mapping.rs  notify.rs  oauth.rs  platform_status_action.rs  pricing.rs  prompts.rs  provider.rs  provider_current.rs  (+22 more)
src-tauri/src/services/codex_ide/: account_refresh.rs  api_key.rs  helpers.rs  profile.rs  remote.rs
src-tauri/src/services/ide_injector/: platforms.rs  secret_storage.rs
src-tauri/src/services/ide_scanner/: importers.rs  local.rs
src-tauri/src/services/oauth/: config.rs  flows.rs  google.rs  polling.rs  shared.rs  trae.rs  windsurf.rs
src-tauri/src/services/provider_current/: helpers.rs  platforms.rs
src-tauri/src/services/session_manager/: codex.rs  parsing.rs  sources.rs  trash.rs
src-tauri/src/services/update_manager/: linux.rs  settings.rs  tests.rs  types.rs
src-tauri/src/services/wakeup/: batch.rs  execution.rs  gateway.rs  listener.rs  scheduler.rs  storage.rs
src-tauri/src/tray/: menu.rs  scope.rs  tests.rs  types.rs
src/components/: DeepLinkHandler.tsx
src/data/: mcpPresets.ts  (+1 more)
(+210 files in other folders)
