[package]
name = "ai-singularity"
version = "0.1.0"
description = "AI Singularity — AI 控制中心：账号、工具、代理、生态统一管理"
authors = ["AI Singularity Contributors"]
license = "AGPL-3.0"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_singularity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }

# HTTP server (本地代理)
axum = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Secure storage
keyring = "3"

# Encryption (AES-256-GCM fallback)
aes-gcm = "0.10"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha1 = "0.10"
rand = "0.8"
base64 = "0.22"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
dirs = "5"

# File Watcher
notify = "6.1.1"
sysinfo = "0.38.4"
axum-streams = "0.25.0"
async-stream = "0.3.6"
reqwest-eventsource = "0.6.0"
async-trait = "0.1.89"
tokio-stream = "0.1.18"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
